--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
+/* @import "tailwindcss"; */
+
+@import 'flowbite';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+/* Your other styles go here */
+
+
+
+/* You can still add custom styles below if needed */
+
